fixed sonarlint errors and added exception handling